Fixing button spacing

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ span {
 }
 
 .skill-container  button {
-  margin: 2px;
+  margin: 4px 2px;
 }
 
 .progress-container {
